Fix font size in .title class for improved readability; adjust form position in index.html for better layout

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -238,7 +238,7 @@ header {
 .title {
   word-spacing: var(--space-xs);
   padding-top: var(--space-xl);
-  font-size: var(--step-0);
+  font-size: var(--step--1);
   text-align: center;
   margin-inline: auto;
 }
